autumn/tests/compile-fail/non_async.rs
use autumn::get;

#[get("/hello")]
fn hello() -> &'static str {
    "Hello!"
}

fn main() {}
